--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "@splidejs/react-splide": "^0.7.12",
     "next": "13.5.4",
     "react": "^18",
